# LearnSlam

./: slam各种库的安装方法
RGBDslam/: CMakeLists.txt  RGB-Dslam.kdev4  parameters.txt
RGBDslam/include/: slamBase.h
RGBDslam/src/: CMakeLists.txt  detectFeatures.cpp  generatePointCloud.cpp  jointPointCloud.cpp  main.cpp  slamBase.cpp  visualOdometry.cpp
